[package]
name = "rlog"
version = "0.1.0"
authors = ["Daniel Schmidt <danielmschmidt92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }


